@@ -3,29 +3,29 @@ require 5.006000;
 use ExtUtils::MakeMaker;
 WriteMakefile
 (
-          'NAME' => 'Perlanet',
-          'VERSION_FROM' => 'lib/Perlanet.pm',
-          'PREREQ_PM' => {
-                           'DateTime' => 0,
-                           'DateTime::Duration' => 0,
-                           'Encode' => 0,
-                           'File::Path' => 0,
-                           'HTML::Scrubber' => 0,
-                           'HTML::Tidy' => 0,
-                           'List::Util' => 0,
-                           'Moose' => 0,
-                           'MooseX::Traits' => 0,
-                           'Template' => 0,
-                           'Test::More' => 0,
-                           'TryCatch' => 0,
-                           'URI::Fetch' => 0,
-                           'XML::Feed' => '0.22',
-                           'YAML' => 0
-                         },
+          'PL_FILES' => {},
           'INSTALLDIRS' => 'site',
+          'NAME' => 'Perlanet',
           'EXE_FILES' => [
                            'bin/perlanet'
                          ],
-          'PL_FILES' => {}
+          'VERSION_FROM' => 'lib/Perlanet.pm',
+          'PREREQ_PM' => {
+                           'DateTime' => 0,
+                           'YAML' => 0,
+                           'HTML::Scrubber' => 0,
+                           'MooseX::Traits' => 0,
+                           'HTML::Tidy' => 0,
+                           'Encode' => 0,
+                           'List::Util' => 0,
+                           'File::Path' => 0,
+                           'Moose' => 0,
+                           'XML::Feed' => '0.22',
+                           'URI::Fetch' => 0,
+                           'Template' => 0,
+                           'Test::More' => 0,
+                           'TryCatch' => 0,
+                           'DateTime::Duration' => 0
+                         }
         )
 ;
