@@ -18,7 +18,7 @@ use XML::Feed;
 use vars qw{$VERSION};
 
 BEGIN {
-  $VERSION = '0.53';
+  $VERSION = '0.54';
 }
 
 with 'MooseX::Traits';
