@@ -24,7 +24,7 @@ $p->run;
 ok(-e $p->feed->{file}, 'Feed created');
 ok(-e $p->page->{file}, 'Page created');
 SKIP: {
-  skip 'XML::OPML::SimpleGen not installed', 1 unless $p->opml;
+  skip 'XML::OPML::SimpleGen not installed', 1 unless $p->has_opml;
   ok(-e $p->opml, 'OPML created');
 }
 
